[build] extract testArgLine configuration to a property