@@ -51,6 +51,10 @@
 		<!-- Versioning -->
 		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
 		<forceContextQualifier>${maven.build.timestamp}</forceContextQualifier>
+		
+		<!-- Testing -->
+		<testHeapSize>1g</testHeapSize>
+		<testArgLine>${tycho.testArgLine} -Xms${testHeapSize} -Xmx${testHeapSize} -XX:+AlwaysLockClassLoader -Dosgi.classloader.type=nonparallel -Djetty.home.bundle=org.eclipse.jetty.osgi.boot -Djetty.port=9090 -XX:+UseConcMarkSweepGC -XX:CMSInitiatingOccupancyFraction=75 -XX:+UseCMSInitiatingOccupancyOnly -XX:+AlwaysPreTouch -Dlogback.configurationFile=${basedir}/src/configuration/logback-maven.xml</testArgLine>
 	</properties>
 
 	<modules>
@@ -858,11 +862,13 @@
 					<artifactId>tycho-surefire-plugin</artifactId>
 					<version>${tycho.version}</version>
 					<configuration>
-						<failIfNoTests>false</failIfNoTests>
 						<includes>
 							<include>**/*Test*.java</include>
 						</includes>
+						<useUIThread>false</useUIThread>
+						<failIfNoTests>false</failIfNoTests>
 						<trimStackTrace>false</trimStackTrace>
+						<argLine>${testArgLine}</argLine>
 					</configuration>
 				</plugin>
 				<plugin>
